[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timediffusion"
version = "0.2.2"
authors = [
  { name="Shishkov Vladislav", email="shishkovve@mail.com" },
]
description = "TimeDiffusion - Unified Framework for Multiple Time Series Tasks"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/timetoai/TimeDiffusion"
"Bug Tracker" = "https://github.com/timetoai/TimeDiffusion/issues"
